# nautilus-backtester

./: .env.example  .gitignore  README.md  pyproject.toml  top100_perps.txt
examples/: backtest_high_level_api.py  backtest_low_level_api.py  example_backtesting.py  historica_and_livedata_handling.py  order_fill_subscription_example.py
exports/: positions_EMACrossStop&Reverse-001_20260626-173015.csv  positions_EMACrossStop&Reverse-001_20260626-183201.csv  positions_EMACrossStop&Reverse-001_20260627-102613.csv  positions_EMACrossStop&Reverse-001_20260627-110406.csv  positions_EMACrossStop&Reverse-001_20260627-121205.csv  positions_EMACrossStop&Reverse-001_20260630-122323.csv
scripts/: backtest_runner.py  binance_data.py  binance_live_futures.py  build_catalog.py  run_backtest.py
server/: app.py  dashboard.html
server/static/: index.html
src/trading/actors/: control_actor.py
src/trading/configs/: binance_config.py  binance_live_futures_config.py
src/trading/strategies/: EMACross.py  EMACrossShortTest.py  fixed_positions.py
